termine la seccion derecha desde cuponidad hasta edicion impresa, estructura html y csss

--- a/index.html
+++ b/index.html
@@ -6,16 +6,14 @@
 		<title>La República.pe</title>
 		<link rel="stylesheet" href="css/font-awesome.css">
 		<link rel="stylesheet" href="css/font-awesome.min.css">
-		<!-- <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"> -->
+		<link rel="stylesheet" href="css/bootstrap.css">
 		<link rel="stylesheet" href="css/bootstrap.min.css">
 		<link rel="stylesheet" href="css/style.css">
 		<link rel="stylesheet" href="css/edith.css">
-		
 		<script src="js/bootstrap.min.js"></script>
-
-	  <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-	  <script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
-  	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+		<script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+		<script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
+		<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 	</head>
 	<body>
 		<header>
@@ -110,10 +108,11 @@
 										<img class="img-responsive" src="image/banner-aside-home.jpg" alt="promocion">
 									</div>
 								</div><!--fin foto de descuento cuponidad-->
-								<div class="row"><!--inicio de subscribirse-->
-									<div class="col-xs-16 col-sm-16 col-md-16 col-lg-16 text-center">
-										<img class="img-responsive" src="image/img_sucribe.png" alt="suscribe">
-										<form>
+								<div class="row mgt-10"><!--inicio de subscribirse-->
+									<div class="col-xs-16 col-sm-16 col-md-16 col-lg-16 text-center" id="bg-puntos">
+										<img class="img-sobre" src="image/img_sucribe.png" alt="suscribe">
+										<form class="fondo-blanco pdbt">
+											<p><strong>Suscríbete</strong> a  nuestro boletín</p>
 											<div class="form-group">
 												<input type="email" class="form-control" placeholder="Email">
 											</div>
@@ -121,19 +120,19 @@
 										</form>
 									</div>
 								</div><!--fin de subscribirse-->
-								<div class="row"><!--inicio seccion aweita-->
-									<div class="col-xs-16 col-sm-16 col-md-16 col-lg-16">
+								<div class="row mgt-10"><!--inicio seccion aweita-->
+									<div class="col-xs-16 col-sm-16 col-md-16 col-lg-16 borde-div">
 										<div class="row"><!--logo aweita-->
-											<div class="col-xs-16 col-sm-16 col-md-16 col-lg-16">
+											<div class="col-xs-16 col-sm-16 col-md-16 col-lg-16 pd-5">
 												<img class="img-responsive center-block" src="image/logo_aweita.jpg" alt="logo-aweita">
 											</div>
 										</div><!--logo aweita-->
 										<div class="row"><!--primera foto-->
-											<div class="col-xs-7 col-sm-7 col-md-7 col-lg-7">
-												<img class="img-responsive" src="image/img_aweita.jpg" alt="img-aweita">
+											<div class="col-xs-7 col-sm-7 col-md-7 col-lg-7 mgt-10">
+												<img class="img-responsive img-borde" src="image/img_aweita.jpg" alt="img-aweita">
 											</div>
 											<div class="col-xs-9 col-sm-9 col-md-9 col-lg-9">
-												<p>Juan Román Riquelme, el adiós al 'Último 10' de Argentina</p>
+												<p class="txt-gris">Juan Román Riquelme, el adiós al 'Último 10' de Argentina</p>
 											</div>
 										</div><!--primera foto-->
 										<div class="row"><!--segunda foto-->
@@ -172,21 +171,21 @@
 										<div class="row"><!--nombre seccion-->
 											<div class="col-xs-16 col-sm-16 col-md-16 col-lg-16 text-center">
 												<hr class="linea-gris">
-												<p class="txt-gris">FOTOS DESTACADAS</p>
+												<p class="">FOTOS DESTACADAS</p>
 											</div>
 										</div><!--nombre seccion-->
 										<div class="row">
 											<div class="col-xs-16 col-sm-16 col-md-16 col-lg-16">
-												<img class="img-responsive" src="image/img_fotodes_prominent.jpg" alt="foto-destacada">
-												<p>Líneas de Nasca: admiten prisión preventiva de 6 meses para activista de Greenpeace | <a class="link-fotos" href="#">FOTOS</a></p>
+												<img class="img-responsive img-borde" src="image/img_fotodes_prominent.jpg" alt="foto-destacada">
+												<p class="txt-gris">Líneas de Nasca: admiten prisión preventiva de 6 meses para activista de Greenpeace | <a class="link-fotos" href="#">FOTOS</a></p>
 											</div>
 										</div>
 										<div class="row"><!--primera foto-->
 											<div class="col-xs-7 col-sm-7 col-md-7 col-lg-7">					
-												<img class="img-responsive" src="image/img_fotodes.jpg" alt="foto2-destacada">
+												<img class="img-responsive img-borde" src="image/img_fotodes.jpg" alt="foto2-destacada">
 											</div>
 											<div class="col-xs-9 col-sm-9 col-md-9 col-lg-9">
-												<p>Uchuraccay: El pueblo que recibe con flores a quienes llegan a pie | <a class="link-fotos" href="#">FOTOS</a></p>
+												<p class="txt-gris">Uchuraccay: El pueblo que recibe con flores a quienes llegan a pie | <a class="link-fotos" href="#">FOTOS</a></p>
 											</div>
 										</div><!--primera foto-->
 										<div class="row"><!--segunda foto-->
@@ -205,6 +204,7 @@
 												<p>Tomas Berdych derrotó 3-0 a Rafael Nadal y avanzó en el Australian Open | <a class="link-fotos" href="#">FOTOS</a></p>
 											</div>
 										</div><!--tercera foto-->
+										<hr class="linea">
 									</div>
 								</div><!--fin de seccion foto destacada-->
 								<div class="row"><!--inicio de seccion especiales-->
@@ -212,31 +212,31 @@
 										<div class="row"><!--nombre seccion-->
 											<div class="col-xs-16 col-sm-16 col-md-16 col-lg-16 text-center">
 												<hr class="linea-gris">
-												<p class="txt-gris">ESPECIALES</p>
+												<p class="">ESPECIALES</p>
 											</div>
 										</div><!--nombre seccion-->
 										<div class="row"><!--primera imagen-->
-											<div class="col-xs-16 col-sm-16 col-md-16 col-lg-16">
+											<div class="col-xs-16 col-sm-16 col-md-16 col-lg-16 mgt-10">
 												<img class="img-responsive" src="image/img_especiales_aside.jpg" alt="regimen-laboral">
-												<p>Régimen laboral juvenil</p>
+												<p class="txt-fondo text-center">Régimen laboral juvenil</p>
 											</div>
 										</div><!--primera imagen-->
 										<div class="row"><!--segunda imagen con dos fotos-->
-											<div class="col-xs-16 col-sm-16 col-md-16 col-lg-16">	
+											<div class="col-xs-16 col-sm-16 col-md-16 col-lg-16 mgt-10">	
 												<img class="img-responsive" src="image/visita-papa.jpg" alt="visita-papa">
-												<p>COP20</p>
+												<p class="txt-fondo text-center">COP20</p>
 											</div>
 										</div><!--segunda imagen con dos fotos-->
 										<div class="row"><!--tercera imagen-->
-											<div class="col-xs-16 col-sm-16 col-md-16 col-lg-16">
+											<div class="col-xs-16 col-sm-16 col-md-16 col-lg-16 mgt-10">
 												<img class="img-responsive" src="image/medios.jpg" alt="medios">
-												<p>Concentración de Medios</p>
+												<p class="txt-fondo text-center">Concentración de Medios</p>
 											</div>
 										</div><!--tercera imagen-->
 										<div class="row"><!--cuarta imagen-->
-											<div class="col-xs-16 col-sm-16 col-md-16 col-lg-16">
+											<div class="col-xs-16 col-sm-16 col-md-16 col-lg-16 mgt-10">
 												<img class="img-responsive" src="image/extinsion.jpg" alt="extension">
-												<p>Especies peruanas en peligro de extinsión</p>
+												<p class="txt-fondo text-center">Especies peruanas en peligro de extinsión</p>
 												<hr class="linea">
 											</div>
 										</div><!--cuarta imagen-->
@@ -247,7 +247,7 @@
 										<div class="row"><!--nombre seccion-->
 											<div class="col-xs-16 col-sm-16 col-md-16 col-lg-16 text-center">
 												<hr class="linea-roja">
-												<p class="txt-roja">CARLINCATURA DEL DÍA</p>
+												<p class="">CARLINCATURA DEL DÍA</p>
 											</div>
 										</div><!--nombre seccion-->
 										<div class="row"><!--titulo-->
@@ -257,8 +257,8 @@
 											</div>
 										</div><!--titulo-->
 										<div class="row">
-											<div class="col-xs-16 col-sm-16 col-md-16 col-lg-16 text-center">
-												<a class="txt-rojo" href="#">Todas las Carlincaturas</a>
+											<div class="col-xs-16 col-sm-16 col-md-16 col-lg-16 text-center mgt-2">
+												<a class="txt-rojo" href="#"><strong>Todas las Carlincaturas</strong></a>
 												<hr class="linea">
 											</div>
 										</div>
@@ -269,82 +269,87 @@
 										<div class="row"><!--nombre seccion-->
 											<div class="col-xs-16 col-sm-16 col-md-16 col-lg-16 text-center">
 												<hr class="linea-gris">
-												<p class="txt-gris">NUESTROS BLOGUEROS</p>
+												<p class="">NUESTROS BLOGUEROS</p>
 											</div>
 										</div><!--nombre seccion-->
 										<div class="row"><!--primer bloguero-->
-											<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+											<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
 												<img class="img-responsive" src="image/img_blogueros.jpg" alt="foto-bloguero">
 											</div>
-											<div class="col-xs-10 col-sm-10 col-md-10 col-lg-10">
+											<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
 												<a href="#" class="txt-negro">Augusto Álvarez Rodrich</a>
-												<p>Charlie Hebdo, historia que no debe repetirse</p>
+												<p><strong>Charlie Hebdo, historia que no debe repetirse<strong></p>
 											</div>
 										</div><!--primer bloguero-->
 										<div class="row"><!--segundo bloguero-->
-											<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+											<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
 												<img class="img-responsive" src="image/img_blogueros.jpg" alt="foto-bloguero">
 											</div>
-											<div class="col-xs-10 col-sm-10 col-md-10 col-lg-10">
+											<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
 												<a href="#" class="txt-negro">Augusto Álvarez Rodrich</a>
-												<p>El único pulpín es Humala</p>
+												<p><strong>El único pulpín es Humala<strong></p>
 											</div>
 										</div><!--segundo bloguero-->
 										<div class="row"><!--tercer bloguero-->
-											<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+											<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
 												<img class="img-responsive" src="image/img_blogueros.jpg" alt="foto-bloguero">
 											</div>
-											<div class="col-xs-10 col-sm-10 col-md-10 col-lg-10">
+											<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
 												<a href="#" class="txt-negro">Augusto Álvarez Rodrich</a>
-												<p>Dios no ha muerto... tengo las manos</p>
+												<p><strong>Dios no ha muerto... tengo las manos<strong></p>
 											</div>
 										</div><!--tercer bloguero-->
 										<div class="row"><!--cuarto bloguero-->
-											<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+											<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
 												<img class="img-responsive" src="image/img_blogueros.jpg" alt="foto-bloguero">
 											</div>
-											<div class="col-xs-10 col-sm-10 col-md-10 col-lg-10">
+											<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
 												<a href="#" class="txt-negro">Augusto Álvarez Rodrich</a>
-												<p>El único pulpín es Humala</p>
+												<p><strong>El único pulpín es Humala<strong></p>
 											</div>
 										</div><!--cuarto bloguero-->
 										<div class="row"><!--quinto bloguero-->
-											<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+											<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
 												<img class="img-responsive" src="image/img_blogueros.jpg" alt="foto-bloguero">
 											</div>
-											<div class="col-xs-10 col-sm-10 col-md-10 col-lg-10">
+											<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
 												<a href="#" class="txt-negro">Augusto Álvarez Rodrich</a>
-												<p>Charlie Hebdo, historia que no debe repetirse</p>
+												<p><strong>Charlie Hebdo, historia que no debe repetirse<strong></p>
 											</div>
 										</div><!--quinto bloguero-->
 										<div class="row"><!--sexto bloguero-->
-											<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+											<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
 												<img class="img-responsive" src="image/img_blogueros.jpg" alt="foto-bloguero">
 											</div>
-											<div class="col-xs-10 col-sm-10 col-md-10 col-lg-10">
+											<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
 												<a href="#" class="txt-negro">Augusto Álvarez Rodrich</a>
-												<p>El único pulpín es Humala</p>
+												<p><strong>El único pulpín es Humala<strong></p>
 											</div>
 										</div><!--sexto bloguero-->
 										<div class="row"><!--septimo bloguero-->
-											<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+											<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
 												<img class="img-responsive" src="image/img_blogueros.jpg" alt="foto-bloguero">
 											</div>
 											<div class="col-xs-10 col-sm-10 col-md-10 col-lg-10">
 												<a href="#" class="txt-negro">Augusto Álvarez Rodrich</a>
-												<p>Dios no ha muerto... tengo las manos</p>
+												<p><strong>Dios no ha muerto... tengo las manos<strong></p>
 											</div>
 										</div><!--septimo bloguero-->
 										<div class="row"><!--octavo bloguero-->
-											<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+											<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
 												<img class="img-responsive" src="image/img_blogueros.jpg" alt="foto-bloguero">
 											</div>
-											<div class="col-xs-10 col-sm-10 col-md-10 col-lg-10">
+											<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
 												<a href="#" class="txt-negro">Augusto Álvarez Rodrich</a>
-												<p>El único pulpín es Humala</p>
-
+												<p><strong>El único pulpín es Humala<strong></p>
 											</div>
 										</div><!--octavo bloguero-->
+										<div class="row">
+											<div class="col-xs-16 col-sm-16 col-md-16 col-lg-16 text-center mgt-2"blog.html>
+												<a class="txt-rojo" href=""><strong>Todas los blogs</strong></a>
+												<hr class="linea">
+											</div>
+										</div>
 
 									</div>
 								</div><!--fin de seccion blogueros-->
@@ -362,34 +367,34 @@
 												<img class="img-responsive" src="image/img_impreso_sd_prominent.jpg" alt="edicion-impresa">
 											</div>
 										</div><!--titulo e imagen edicion impresa-->
-										<div class="row"><!--primer periodico-->
-											<div class="col-xs-8 col-sm-8 col-md-8 col-lg-8">
+										<div class="row mgt-10"><!--primer periodico-->
+											<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
 												<img class="img-responsive" src="image/img_impreso_sd.jpg" alt="edicion1">
 											</div>
-											<div class="col-xs-8 col-sm-8 col-md-8 col-lg-8">
+											<div class="col-xs-10 col-sm-10 col-md-10 col-lg-10">
 												<p>Extorsionan a menores en colegios</p>
-												<a class="txt-rojo" href="#">La República - Norte</a>
+												<a class="txt-rojo linea-roja" href="#">La República - Norte</a>
 											</div>
 										</div><!--primer periodico-->
-										<div class="row"><!--segundo periodico-->
-											<div class="col-xs-8 col-sm-8 col-md-8 col-lg-8">
+										<div class="row mgt-10"><!--segundo periodico-->
+											<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
 												<img class="img-responsive" src="image/img_impreso_sd_politica_01.jpg" alt="edicion2">
 											</div>
-											<div class="col-xs-8 col-sm-8 col-md-8 col-lg-8">
+											<div class="col-xs-10 col-sm-10 col-md-10 col-lg-10">
 												<p>Candidatos vinculados a la corrupción</p>
-												<a class="txt-rojo" href="#">La República - Sur</a>
+												<a class="txt-rojo linea-roja" href="#">La República - Sur</a>
 											</div>
 										</div><!--segundo periodico-->
-										<div class="row"><!--tercer periodico-->
-											<div class="col-xs-8 col-sm-8 col-md-8 col-lg-8">
+										<div class="row mgt-10"><!--tercer periodico-->
+											<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
 												<img class="img-responsive" src="image/img_impreso_sd_politica_02.jpg" alt="edicion3">
 											</div>
-											<div class="col-xs-8 col-sm-8 col-md-8 col-lg-8">
+											<div class="col-xs-10 col-sm-10 col-md-10 col-lg-10">
 												<p>En portada ONPE</p>
-												<a class="txt-rojo" href="#">Domingo</a>
-												<hr class="linea">
+												<a class="txt-rojo linea-roja" href="#">Domingo</a>
 											</div>
 										</div><!--tercer periodico-->
+										<hr class="linea">
 									</div>
 								</div><!--fin de seccion edicion impresa-->
 							</div>
