Se agrego un archivo js, se hizo carrusel, se dieron estilos en style.css, se agrego codigo en index.html, se agrego una imagen a la carpeta imagenes

--- a/blogs.html
+++ b/blogs.html
@@ -20,9 +20,9 @@
 				<div class="col-md-2"><!--banner izquierdo-->
 				</div>
 
-				<div class="col-md-12"><!--Contenido de blogs  -->
+				<div class="col-md-12 col-xs-12 col-sm-12"><!--Contenido de blogs  -->
 					<div class="row"><!--Renglon titulo-->
-						<div class="col-md-16"s><!--Titulo-->
+						<div class="col-md-16 col-xs-16 col-sm-16"><!--Titulo-->
 							<h2>Blogs</h2>
 							<p class="gris">LO ÚLTIMO EN BLOGS <img src="image/double-arrow-bottom.png" alt="flecha"></p>
 						</div><!--Fin de titulo-->
@@ -46,13 +46,13 @@
 									</div>
 								</div>
 							</div><!--Fin de blog -->
-							<div class="col-md-6 alto" ><!--Segundo blog blog-->
+							<div class="col-md-6  alto" ><!--Segundo blog blog-->
 								<div class="square pad">
 									<small>Lunes, 14 de julio de 2015</small>
 									<p class="fuerte font20">Dios ha muerto...tengo las manos cubeirtas de sangre</p>
 									<div class="gray abajo">
 										<div class="row text-left pad"><!--Renglon de foto-->
-											<div class="col-md-5"><!-- foto -->
+											<div class="col-md-5 "><!-- foto -->
 												<img class="imagen" src="image/blog_avatar_02.jpg" alt="foto">
 											</div><!-- fin foto -->
 											<div class="col-md-11 fuerte"><!--texto-->
